mobileblurb overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@
     flex-direction: column;
     align-items: center;
     height: 100svh;
+    overflow: hidden;
     width: 100vw;
     background-image: linear-gradient(
       rgba(72, 37, 141, 0.45) 0%,
